indigo_app/static/stylesheets/app.scss
$border-colour: #ddd;
$header-colour: #eee;
$header-colour2: #f5f5f5;

html, body {
  height: 100%;
  min-height: 100%;
}

/* primary containers */

#wrapper,
.workspace,
.workspace-content,
.sidebar-container,
.main-container,
.high
{
  height: inherit;
}

.workspace {
  width: 100%;
  overflow: hidden;
}

.sidebar-container,
.main-container {
  float: left;
  overflow: hidden;
}

.sidebar-container {
  border-right: 1px solid $border-colour;

  .sidebar {
    height: inherit;
  }
}

.main-container {
  width: calc(100% - 230px - 2px);

  article {
    margin: 10px;
  }
}

/* workspace and boxed groups */

.workspace-header,
.boxed-group-header {
  height: 45px;
  padding: 5px;
  background-color: $header-colour2;
  border-bottom: 1px solid $border-colour;

  h1, h2, h3, h4 {
    line-height: 1.5;
    margin: 4px;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow-x: hidden;
  }
}

.workspace-header {
  background-color: $header-colour;
  border-bottom-width: 2px;

  .search-box {
    float: left;
    width: 230px;
  }

  .workspace-title {
    float: left;
    width: calc(100% - 232px);

    h4 {
      max-width: 80%;
    }
  }

  .buttons {
    position: fixed;
    top: 5px;
    right: 15px;
  }
}

.boxed-group-inner {
  height: inherit;
  overflow-x: hidden;
  overflow-y: auto;
  margin: 5px 5px;
  padding-bottom: 110px;
}

/* sidebars */

.sidebar-nav {
  width: 230px;
}

/* editors */

.document-content-view {
  .document-sheet-container,
  .document-xml-editor {
    height: 50%;
  }

  .document-sheet-container {
    margin-bottom: 5px;
  }
}

/* misc */

#error-box {
  position: fixed;
  top: 10px;
  left: 0px;
  right: 0px;
  
  .alert {
    width: 600px;
    margin-left: auto;
    margin-right: auto;
  }
}

#progress-bar {
  position: fixed;
  bottom: 20px;
  right: 20px;
  width: 150px;
  height: 20px;
  padding: 5px;
  background-color: lightgrey;
  border-radius: 5px;
  z-index: 100;
}

/* make a document sheet look like paper */
.document-sheet-container {
  height: inherit;
  overflow-x: hidden;
  overflow-y: auto;
  padding-bottom: 110px;

  background: #aaa;
  margin: 0px;

  .document-sheet {
    border: 1px solid #aaa;
    box-shadow: 0 0 10px #999;
    padding: 30px;
    margin: 20px;
    background: white;
  }
}


/* akoma ntoso styles */
.an-container {
  text-align: justify;
  line-height: 1.5em;

  @import 'akoma-ntoso';
}

/* standalone pages, such as the password reset form */
.standalone {
  margin-top: 100px;
}

.tablesorter {
  th {
    cursor: pointer;
  }

  th.headerSortUp::after {
    font-family: fontawesome;
    content: ' \f0dd';
  }

  th.headerSortDown::after {
    font-family: fontawesome;
    content: ' \f0de';
  }
}

.panel-centered {
  max-width: 500px;
  margin: 50px auto 0px auto;
}

.dropzone {
  width: 100%;
  height: 100px;
  border: 5px dashed $border-colour;
  font-size: 24px;
  text-align: center;
  padding-top: 25px;

  &.dragging {
    background-color: $border-colour;
  }
}

.document-list-table {
  table-layout: fixed;

  th.title { width: 53% }
  th.draft { width: 7% }
  th.year { width: 7% }
  th.number { width: 20% }
  th.updated { width: 10% }

  td, th {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
  }
}

// table of contents browser
.toc-holder {
  margin-top: 5px;
  border-top: 1px solid #ddd;

  ol {
    list-style: none;
    padding: 0px 0px 0px 15px;
    
    a {
      display: block;
      overflow: hidden;
      white-space: nowrap;
      text-overflow: ellipsis;

      &.active {
        background-color: #337ab7;
        color: white;
        border-radius: 5px;
        margin-left: -5px;
        padding: 0px 0px 0px 5px;
      }
    }
  }

  .toc-chapter,
  .toc-part {
    font-weight: bold;
    margin-top: 5px;
  }
}

